--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
       <div class="form_text">ニックネーム
         <span class="required">必須</span>
       </div>
-      <%= f.text_area :nickname, class:"input_default", id:"nickname", placeholder:"例) 太郎 ", maxlength:"15", autofocus: true %>
+      <%= f.text_field :nickname, class:"input_default", id:"nickname", placeholder:"例) 太郎 ", maxlength:"15", autofocus: true %>
 
       <div class='form_text'>
         メールアドレス
